feat(config, cache, utils): enhance application configuration and introduce Redis caching
- Update .env.example to include comprehensive environment variables for various MCP servers and API keys, improving configuration clarity.
- Implement Redis-based caching system in src/cache with RedisCache class, providing methods for setting, getting, and deleting cache entries.
- Add utility functions for logging and error handling in src/utils, standardizing error management across the application.
- Introduce configuration utilities in src/utils/config to manage application settings and environment variables effectively.

This commit establishes a robust configuration and caching framework for the TripSage application, enhancing performance and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,61 @@
-# Supabase configuration
-SUPABASE_URL="https://your-project-id.supabase.co"
-SUPABASE_ANON_KEY="your-anon-key" # Get this from the Supabase dashboard
-SUPABASE_SERVICE_ROLE_KEY="your-service-role-key" # Get this from the Supabase dashboard
+# TripSage Environment Variables
+# Copy this file to .env and update with your actual values
 
-# OpenAI API configuration
-OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+# OpenAI API (Required for agent functionality)
+OPENAI_API_KEY=your-openai-api-key
+
+# Supabase Configuration
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # App configuration
-NODE_ENV="development"
-PORT=3000
-NEXT_PUBLIC_API_URL="http://localhost:3000"
+NODE_ENV=development
+PORT=8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # Database configuration (optional if using Supabase)
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tripsage"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tripsage
+
+# Memory MCP Server
+MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
+MEMORY_MCP_API_KEY=your-memory-mcp-api-key
+
+# Google Maps MCP Server
+GOOGLE_MAPS_MCP_ENDPOINT=https://google-maps-mcp.example.com
+GOOGLE_MAPS_MCP_API_KEY=your-google-maps-mcp-api-key
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Airbnb MCP Server
+AIRBNB_MCP_ENDPOINT=https://airbnb-mcp.example.com
+AIRBNB_MCP_API_KEY=your-airbnb-mcp-api-key
+
+# Time MCP Server
+TIME_MCP_ENDPOINT=https://time-mcp.example.com
+TIME_MCP_API_KEY=your-time-mcp-api-key
+
+# Sequential Thinking MCP Server
+SEQ_THINKING_MCP_ENDPOINT=https://seq-thinking-mcp.example.com
+SEQ_THINKING_MCP_API_KEY=your-seq-thinking-mcp-api-key
+
+# Flights MCP Server
+DUFFEL_API_KEY=your-duffel-api-key
+FLIGHTS_MCP_ENDPOINT=https://flights-mcp.example.com
+FLIGHTS_MCP_API_KEY=your-flights-mcp-api-key
+
+# Weather MCP Server
+OPENWEATHERMAP_API_KEY=your-openweathermap-api-key
+VISUAL_CROSSING_API_KEY=your-visual-crossing-api-key
+WEATHER_MCP_ENDPOINT=https://weather-mcp.example.com
+WEATHER_MCP_API_KEY=your-weather-mcp-api-key
+
+# Web Crawling MCP Server
+WEBCRAWL_MCP_ENDPOINT=https://webcrawl-mcp.example.com
+WEBCRAWL_MCP_API_KEY=your-webcrawl-mcp-api-key
+
+# Browser Automation MCP Server
+BROWSER_MCP_ENDPOINT=https://browser-mcp.example.com
+BROWSER_MCP_API_KEY=your-browser-mcp-api-key
+
+# Redis Cache
+REDIS_URL=redis://localhost:6379/0
