feat(env, config): update environment configuration for Airbnb MCP server
- Modify .env.example to set the Airbnb MCP endpoint to a local server and remove the requirement for an API key, simplifying the setup for local development.
- Introduce new configuration file `claude_desktop_config.json` for managing Airbnb MCP server commands and arguments.
- Add `package.json` for managing dependencies related to the Airbnb MCP server, ensuring proper setup for the project.

These changes enhance the development experience by streamlining the configuration for the Airbnb MCP server, making it easier for developers to work locally.

--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,9 @@ GOOGLE_MAPS_MCP_API_KEY=your-google-maps-mcp-api-key
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
 # Airbnb MCP Server
-AIRBNB_MCP_ENDPOINT=https://airbnb-mcp.example.com
-AIRBNB_MCP_API_KEY=your-airbnb-mcp-api-key
+AIRBNB_MCP_ENDPOINT=http://localhost:3000
+# Airbnb MCP doesn't require an API key
+AIRBNB_IGNORE_ROBOTS_TXT=false
 
 # Time MCP Server
 TIME_MCP_ENDPOINT=https://time-mcp.example.com
