feat(docs, env): update Google Maps MCP integration and environment configuration
- Modify .env.example to set the Google Maps MCP endpoint to a local server for easier local development.
- Revise the Google Maps integration documentation to reflect the adoption of the official @modelcontextprotocol/server-google-maps package, emphasizing its benefits such as production-ready stability and comprehensive feature set.
- Enhance the documentation with detailed descriptions of the tools exposed by the Google Maps MCP server, including input and output examples for geocoding, reverse geocoding, and place details.

These changes improve the development experience by streamlining the configuration for the Google Maps MCP server and providing clear guidance on its integration within the TripSage application.

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,7 @@ MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
 MEMORY_MCP_API_KEY=your-memory-mcp-api-key
 
 # Google Maps MCP Server
-GOOGLE_MAPS_MCP_ENDPOINT=https://google-maps-mcp.example.com
-GOOGLE_MAPS_MCP_API_KEY=your-google-maps-mcp-api-key
+GOOGLE_MAPS_MCP_ENDPOINT=http://localhost:3000
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
 # Airbnb MCP Server
