--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# TripSage Environment Variables
+# TripSage Environment Configuration
 # Copy this file to .env and update with your actual values
 
 # OpenAI API (Required for agent functionality)
@@ -17,45 +17,53 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 # Database configuration (optional if using Supabase)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tripsage
 
-# Memory MCP Server
-MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
-MEMORY_MCP_API_KEY=your-memory-mcp-api-key
-
 # Google Maps MCP Server
-GOOGLE_MAPS_MCP_ENDPOINT=http://localhost:3000
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+MCP_GOOGLEMAPS_ENDPOINT=http://localhost:3101
 
 # Airbnb MCP Server
-AIRBNB_MCP_ENDPOINT=http://localhost:3000
-# Airbnb MCP doesn't require an API key
+AIRBNB_API_KEY=your-airbnb-api-key
+MCP_AIRBNB_ENDPOINT=http://localhost:3100
 AIRBNB_IGNORE_ROBOTS_TXT=false
-
-# Time MCP Server
-TIME_MCP_ENDPOINT=https://time-mcp.example.com
-TIME_MCP_API_KEY=your-time-mcp-api-key
-
-# Sequential Thinking MCP Server
-SEQ_THINKING_MCP_ENDPOINT=https://seq-thinking-mcp.example.com
-SEQ_THINKING_MCP_API_KEY=your-seq-thinking-mcp-api-key
 
 # Flights MCP Server
 DUFFEL_API_KEY=your-duffel-api-key
-FLIGHTS_MCP_ENDPOINT=https://flights-mcp.example.com
-FLIGHTS_MCP_API_KEY=your-flights-mcp-api-key
+MCP_FLIGHTS_ENDPOINT=http://localhost:3103
 
 # Weather MCP Server
 OPENWEATHERMAP_API_KEY=your-openweathermap-api-key
 VISUAL_CROSSING_API_KEY=your-visual-crossing-api-key
-WEATHER_MCP_ENDPOINT=https://weather-mcp.example.com
-WEATHER_MCP_API_KEY=your-weather-mcp-api-key
+MCP_WEATHER_ENDPOINT=http://localhost:3102
 
 # Web Crawling MCP Server
-WEBCRAWL_MCP_ENDPOINT=https://webcrawl-mcp.example.com
-WEBCRAWL_MCP_API_KEY=your-webcrawl-mcp-api-key
+MCP_WEBCRAWL_ENDPOINT=http://localhost:3106
+
+# Calendar MCP Server
+GOOGLE_CALENDAR_API_KEY=your-google-calendar-api-key
+GOOGLE_CALENDAR_CLIENT_ID=your-google-calendar-client-id
+GOOGLE_CALENDAR_CLIENT_SECRET=your-google-calendar-client-secret
+MCP_CALENDAR_ENDPOINT=http://localhost:3104
+
+# Memory MCP Server (Knowledge Graph)
+NEO4J_URI=neo4j://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your-neo4j-password
+MCP_MEMORY_ENDPOINT=http://localhost:3105
 
 # Browser Automation MCP Server
-BROWSER_MCP_ENDPOINT=https://browser-mcp.example.com
-BROWSER_MCP_API_KEY=your-browser-mcp-api-key
+MCP_BROWSER_ENDPOINT=http://localhost:3107
 
-# Redis Cache
+# Time MCP Server
+MCP_TIME_ENDPOINT=http://localhost:3108
+
+# Redis Cache Configuration
 REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=
+REDIS_TLS=false
+REDIS_TTL_SHORT=300
+REDIS_TTL_MEDIUM=3600
+REDIS_TTL_LONG=86400
+
+# OpenAI Agents SDK Configuration
+OPENAI_AGENTS_SDK_TRACE_ENABLED=true
+OPENAI_AGENTS_SDK_TRACE_CONSOLE=true
