--- a/mcp_servers/package.json
+++ b/mcp_servers/package.json
@@ -4,9 +4,11 @@
   "description": "MCP server dependencies for TripSage",
   "private": true,
   "scripts": {
-    "start": "echo \"Error: no start script specified\" && exit 1"
+    "start:airbnb": "npx -y @openbnb/mcp-server-airbnb",
+    "start:google-maps": "npx -y @modelcontextprotocol/server-google-maps"
   },
   "dependencies": {
-    "@openbnb/mcp-server-airbnb": "^0.1.1"
+    "@openbnb/mcp-server-airbnb": "^0.1.1",
+    "@modelcontextprotocol/server-google-maps": "^0.6.2"
   }
 }
