feat(env, docs): enhance environment configuration and documentation for database providers
- Updated the `.env.example` file to include new configuration options for database providers, specifically for Supabase and Neon, enhancing flexibility for developers.
- Added timeout and session management settings for Supabase, along with connection pooling parameters for Neon, improving database interaction efficiency.
- Revised the `.gitignore` to include additional ignored files, ensuring a cleaner repository.
- Expanded the CLAUDE.md documentation with a new Table of Contents and improved sections on project architecture and tool integration strategies, providing clearer guidance for developers.

These changes significantly enhance the environment setup and documentation clarity for the TripSage application, facilitating better development practices and integration of database functionalities.

--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,30 @@
 # OpenAI API (Required for agent functionality)
 OPENAI_API_KEY=your-openai-api-key
 
+# Database Provider Configuration
+# Select which database provider to use: "supabase" or "neon"
+DB_PROVIDER=supabase
+
 # Supabase Configuration
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+SUPABASE_TIMEOUT=60.0
+SUPABASE_AUTO_REFRESH_TOKEN=true
+SUPABASE_PERSIST_SESSION=true
+
+# Neon Configuration (for development environment)
+NEON_CONNECTION_STRING=postgresql://username:password@endpoint-name.region.aws.neon.tech/database
+NEON_MIN_POOL_SIZE=1
+NEON_MAX_POOL_SIZE=10
+NEON_MAX_INACTIVE_CONNECTION_LIFETIME=300.0
 
 # App configuration
 NODE_ENV=development
 PORT=8000
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# Database configuration (optional if using Supabase)
+# Legacy Database configuration (deprecated)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tripsage
 
 # Google Maps MCP Server
