--- a/src/agents/requirements.txt
+++ b/src/agents/requirements.txt
@@ -1,7 +1,8 @@
-openai>=1.18.0
-pydantic>=2.13.2
+openai-agents>=0.0.14
+openai>=1.78.0
+pydantic>=2.11.4
 python-dotenv>=1.1.0
-supabase>=2.13.0
-httpx>=0.27.0
+supabase>=2.15.1
+httpx>=0.28.1
 typing-extensions>=4.13.2
 tenacity>=9.1.2
