chore: Add .env-neo4j to gitignore and improve template

--- a/scripts/templates/.env-neo4j
+++ b/scripts/templates/.env-neo4j
@@ -1,8 +1,17 @@
+# TripSage Application Configuration - Neo4j Settings
+# IMPORTANT: Do not commit the actual .env-neo4j file, only this template
+
 # Neo4j Database Configuration
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=your_password_here
+NEO4J_DATABASE=neo4j
+NEO4J_MAX_CONNECTION_LIFETIME=3600
+NEO4J_MAX_CONNECTION_POOL_SIZE=50
+NEO4J_CONNECTION_ACQUISITION_TIMEOUT=60
+NEO4J_DEFAULT_QUERY_TIMEOUT=60
 
 # Neo4j Memory MCP Configuration
 MEMORY_MCP_ENDPOINT=http://localhost:8000
+MEMORY_MCP_API_KEY=your-memory-mcp-api-key
 MEMORY_MCP_VERSION=v1
