fix(config): Ensure all external MCP and API credentials in AppSettings
- Added configuration fields for Crawl4AI MCP with full parameters
- Added PlaywrightMCPConfig for ExecuteAutomation Playwright MCP
- Added StagehandMCPConfig for Browserbase's Stagehand MCP
- Added DockerMCPConfig for Docker MCP
- Added OpenAPIMCPConfig for OpenAPI MCP integration
- Enhanced TimeMCPConfig with timezone parameters
- Updated .env.example with all new configuration options
- Updated settings_init.py to validate critical credentials
- Added verification script for settings configuration

Closes #1.1

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,41 @@ WEBCRAWL_MCP_ENDPOINT=http://localhost:3001
 WEBCRAWL_MCP_API_KEY=your_webcrawl_mcp_api_key_here
 CRAWL4AI_API_URL=http://localhost:8000/api
 CRAWL4AI_API_KEY=your_crawl4ai_api_key_here
+CRAWL4AI_AUTH_TOKEN=your_crawl4ai_auth_token_here
+CRAWL4AI_TIMEOUT=30000
+CRAWL4AI_MAX_DEPTH=3
+CRAWL4AI_DEFAULT_FORMAT=markdown
+FIRECRAWL_API_URL=https://api.firecrawl.dev/v1
+FIRECRAWL_API_KEY=your_firecrawl_api_key_here
 PLAYWRIGHT_MCP_ENDPOINT=http://localhost:3004
+
+# Playwright MCP configuration
+PLAYWRIGHT_MCP_ENDPOINT=http://localhost:3004
+PLAYWRIGHT_MCP_API_KEY=your_playwright_mcp_api_key_here
+PLAYWRIGHT_HEADLESS=true
+PLAYWRIGHT_BROWSER_TYPE=chromium
+PLAYWRIGHT_SLOW_MO=50
+PLAYWRIGHT_VIEWPORT_WIDTH=1280
+PLAYWRIGHT_VIEWPORT_HEIGHT=720
+PLAYWRIGHT_IGNORE_HTTPS_ERRORS=false
+PLAYWRIGHT_TIMEOUT=30000
+PLAYWRIGHT_NAVIGATION_TIMEOUT=60000
+PLAYWRIGHT_RECORD_VIDEO=false
+PLAYWRIGHT_RECORD_HAR=false
+PLAYWRIGHT_TRACE=false
+
+# Stagehand MCP configuration
+STAGEHAND_MCP_ENDPOINT=http://localhost:3005
+STAGEHAND_MCP_API_KEY=your_stagehand_mcp_api_key_here
+BROWSERBASE_API_KEY=your_browserbase_api_key_here
+BROWSERBASE_PROJECT_ID=your_browserbase_project_id_here
+STAGEHAND_OPENAI_API_KEY=your_openai_api_key_for_stagehand
+STAGEHAND_HEADLESS=true
+STAGEHAND_RECOVERY_ENABLED=true
+STAGEHAND_TIMEOUT=30000
+STAGEHAND_VIEWPORT_WIDTH=1280
+STAGEHAND_VIEWPORT_HEIGHT=720
+STAGEHAND_LOCAL_CDP_URL=http://localhost:9222
 
 # Browser MCP configuration
 BROWSER_MCP_ENDPOINT=http://localhost:3002
@@ -87,6 +121,9 @@ GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # Time MCP configuration
 TIME_MCP_ENDPOINT=http://localhost:3007
 TIME_MCP_API_KEY=your_time_mcp_api_key_here
+TIME_DEFAULT_TIMEZONE=UTC
+TIME_USE_SYSTEM_TIMEZONE=true
+TIME_FORMAT_24_HOUR=false
 
 # Memory MCP configuration
 MEMORY_MCP_ENDPOINT=http://localhost:3008
@@ -102,6 +139,25 @@ CALENDAR_MCP_API_KEY=your_calendar_mcp_api_key_here
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
+
+# Docker MCP configuration
+DOCKER_MCP_ENDPOINT=http://localhost:3011
+DOCKER_MCP_API_KEY=your_docker_mcp_api_key_here
+DOCKER_IMAGE_REGISTRY=docker.io
+DOCKER_DEFAULT_TIMEOUT=60000
+DOCKER_SOCKET_PATH=/var/run/docker.sock
+DOCKER_MAX_CONTAINER_COUNT=10
+DOCKER_PRIVILEGED_MODE=false
+DOCKER_NETWORK_MODE=bridge
+
+# OpenAPI MCP configuration
+OPENAPI_MCP_ENDPOINT=http://localhost:3012
+OPENAPI_MCP_API_KEY=your_openapi_mcp_api_key_here
+OPENAPI_SCHEMA_URL=https://example.com/openapi.json
+OPENAPI_AUTHENTICATION_TYPE=bearer
+OPENAPI_DEFAULT_TIMEOUT=30000
+OPENAPI_RETRY_COUNT=3
+OPENAPI_CACHE_SCHEMA=true
 
 # Agent configuration
 AGENT_MODEL_NAME=gpt-4o
