feat: Add comprehensive tests for database models and update TODO files

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,14 @@
 [pytest]
-testpaths = src/tests
+testpaths = src/tests tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
 log_cli = True
 log_cli_level = INFO
-addopts = -v
+addopts = -v --cov=tripsage --cov-report=term-missing
+
+markers =
+    models: tests for database models
+    integration: tests that require external services
+    unit: unit tests that don't require external services
