--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,11 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Python lib directories (but not frontend/src/lib)
+/lib/
+/lib64/
+frontend/lib/
+!frontend/src/lib/
 parts/
 sdist/
 var/
