--- a/.github/workflows/frontend-ci-simple.yml
+++ b/.github/workflows/frontend-ci-simple.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'pnpm'
-          cache-dependency-path: './frontend/pnpm-lock.yaml'
+          cache-dependency-path: 'frontend/pnpm-lock.yaml'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -44,8 +44,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ./frontend/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}
+            ./.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('frontend/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-
 
@@ -70,6 +70,6 @@ jobs:
         with:
           name: build-files
           path: |
-            ./frontend/.next/
-            ./frontend/public/
+            ./.next/
+            ./public/
           retention-days: 1
