--- a/.github/workflows/frontend-ci-simple.yml
+++ b/.github/workflows/frontend-ci-simple.yml
@@ -37,6 +37,14 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: 'frontend/pnpm-lock.yaml'
 
+      - name: Debug working directory
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          echo "Package.json exists:"
+          ls -la package.json || echo "No package.json found"
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
