fix: correct biome command syntax

--- a/.github/workflows/frontend-ci-simple.yml
+++ b/.github/workflows/frontend-ci-simple.yml
@@ -56,7 +56,7 @@ jobs:
         continue-on-error: true
 
       - name: Run Biome format check
-        run: pnpm biome format --check .
+        run: pnpm biome check --fix .
 
       - name: Run TypeScript type check
         run: pnpm type-check
