--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -34,6 +35,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "5",
     "@testing-library/react": "^16.3.0",
+    "ai": "^4.3.16",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.12.1",
