--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "typing-extensions>=4.13.2",
     "redis>=6.1.0",
     "pytest-asyncio>=1.0.0",
+    "nest-asyncio>=1.6.0",
 ]
 
 [project.optional-dependencies]
