feat: add new dependencies for Google API and Duffel integration
This commit introduces several new dependencies, including `google-api-python-client`, `google-auth-httplib2`, `google-auth-oauthlib`, `duffel-api`, `httpx`, and `python-dotenv`, to support upcoming features related to API integrations. These additions align with the ongoing efforts to enhance the architecture and maintainability of the codebase by facilitating direct interactions with external services.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ dependencies = [
     "psutil>=5.9.0",
     # Security
     "cryptography>=41.0.0",
+    "google-api-python-client>=2.170.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
+    "duffel-api>=0.6.2",
+    "httpx>=0.28.1",
+    "python-dotenv>=1.1.0",
 ]
 
 [project.optional-dependencies]
