--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,11 @@ dependencies = [
     "psutil>=5.9.0",
     # Security
     "cryptography>=41.0.0",
-    "google-api-python-client>=2.170.0",
+    # API integrations
+    "google-api-python-client>=2.134.0",
+    "google-auth>=2.30.0",
     "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.2",
+    "google-auth-oauthlib>=1.2.0",
     "duffel-api>=0.6.2",
     "httpx>=0.28.1",
     "python-dotenv>=1.1.0",
@@ -46,7 +48,9 @@ dev = [
     "pytest-cov>=6.1.1",
     "pytest-asyncio>=0.25.1",
     "coverage[toml]>=7.6.9",
-    "pytest-benchmark>=4.0.0"
+    "pytest-benchmark>=4.0.0",
+    "pytest-httpx>=0.35.0",
+    "fakeredis>=2.29.0"
 ]
 
 [tool.ruff]
