--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,15 @@ description = "AI-powered travel planning system with multi-source data integrat
 readme = "README.md"
 requires-python = ">=3.12"
 authors = [{ name = "TripSage Team" }]
+dependencies = [
+    "email-validator>=2.2.0",
+    "fastapi>=0.115.12",
+    "pydantic>=2.11.5",
+    "pydantic-settings>=2.9.1",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "python-dotenv>=1.1.0",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
