fix: resolve merge integration issues and maintain optimal agent API implementation
Post-merge fixes to ensure optimal functionality while preserving our refactoring goals:

Technical Resolutions:
- Fix import order in api/deps.py for proper linting compliance
- Update main.py to use settings.dragonfly.url instead of settings.redis_url
- Add missing dependencies: google-*, googlemaps, playwright, crawl4ai, mem0ai
- Maintain agent API configuration inheritance from CoreAppSettings
- Preserve all exception handlers and comprehensive test suite

Architectural Alignment:
- Remove MCP dependencies from API layer as intended by main branch
- Keep agent-specific settings and validation logic intact
- Ensure compatibility with core infrastructure changes
- Maintain 45/45 tests passing with excellent coverage

The merge successfully integrates main's architectural improvements while
preserving our optimal agent API configuration inheritance and comprehensive
exception handling implementation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,20 @@ readme = "README.md"
 requires-python = ">=3.12"
 authors = [{ name = "TripSage Team" }]
 dependencies = [
+    "crawl4ai>=0.6.3",
     "cryptography>=45.0.3",
     "email-validator>=2.2.0",
     "fakeredis>=2.29.0",
     "fastapi>=0.115.12",
+    "google-api-python-client>=2.170.0",
+    "google-auth>=2.40.2",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
+    "googlemaps>=4.10.0",
     "httpx>=0.28.1",
+    "mem0ai>=0.1.102",
     "passlib[bcrypt]>=1.7.4",
+    "playwright>=1.52.0",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
     "pytest>=8.3.5",
