--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -29,10 +29,19 @@ scrape_configs:
       format: ['prometheus']
 
   # Scrape TripSage API metrics (when available)
+  # CONFIGURATION NOTES for different development setups:
+  # - Docker Desktop (Windows/Mac): Use 'host.docker.internal:8000'
+  # - Linux Docker: Use 'localhost:8000' or '172.17.0.1:8000' (Docker bridge IP)
+  # - API running in Docker: Replace with service name, e.g., 'tripsage-api:8000'
+  # - Custom port: Update port number if API runs on different port
   - job_name: 'tripsage-api'
     static_configs:
       - targets: ['host.docker.internal:8000']
     metrics_path: /metrics
+    # Scrape interval for API metrics
+    scrape_interval: 30s
+    # Timeout for scraping API metrics
+    scrape_timeout: 10s
 
 alerting:
   alertmanagers:
