--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,40 +41,7 @@ dependencies = [
 where = ["."]
 include = ["tripsage", "tripsage_core", "tripsage.*", "tripsage_core.*"]
 
-# Only include core shared dependencies here
-# Subprojects maintain their own requirements.txt files
-dependencies = [
-    "pydantic>=2.11.5,<3.0.0",
-    "pydantic-settings>=2.9.1",
-    "sqlalchemy[asyncio]>=2.0.41",
-    "greenlet>=3.1.1",
-    "pytest>=8.3.5",
-    "pytest-cov>=6.1.1",
-    "langgraph>=0.4.4",
-    "langchain-core>=0.3.61",
-    "langchain-openai>=0.3.18",
-    "langsmith>=0.3.42",
-    "typing-extensions>=4.13.2",
-    "redis>=6.1.0",
-    "pytest-asyncio>=1.0.0",
-    "nest-asyncio>=1.6.0",
-    # OpenTelemetry and monitoring
-    "opentelemetry-api>=1.21.0",
-    "opentelemetry-sdk>=1.21.0",
-    "opentelemetry-instrumentation-redis>=0.42b0",
-    "opentelemetry-exporter-otlp>=1.21.0",
-    "psutil>=5.9.0",
-    # Security
-    "cryptography>=41.0.0",
-    # API integrations
-    "google-api-python-client>=2.134.0",
-    "google-auth>=2.30.0",
-    "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.0",
-    "duffel-api>=0.6.2",
-    "httpx>=0.28.1",
-    "python-dotenv>=1.1.0",
-]
+# Optional dependencies for development and testing
 
 [project.optional-dependencies]
 dev = [
