--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ dev = [
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.1",
     "nest-asyncio>=1.6.0",
+    "radon>=6.0.1",
 ]
 test = [
     "email-validator>=2.2.0",
