--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.3",
     "vaul": "^1.1.2",
     "zod": "^3.25.28",
     "zustand": "^5.0.5"
