feat(cache): complete DragonflyDB configuration and integration
- Add DragonflyDB environment variables to .env.example
- Update DragonflyConfig with password authentication and model_config
- Implement password authentication in cache service connection
- Create verification script to test DragonflyDB connectivity
- Update cache service to handle password in connection URL
- Configure DragonflyDB with proper memory settings and eviction policy

BREAKING CHANGE: Environment variables changed from REDIS_* to DRAGONFLY_* prefix

--- a/.env.example
+++ b/.env.example
@@ -36,11 +36,14 @@ NEO4J_MAX_CONNECTION_POOL_SIZE=50
 NEO4J_CONNECTION_ACQUISITION_TIMEOUT=60
 NEO4J_DEFAULT_QUERY_TIMEOUT=60
 
-# Redis configuration
-REDIS_URL=redis://localhost:6379/0
-REDIS_TTL_SHORT=300
-REDIS_TTL_MEDIUM=3600
-REDIS_TTL_LONG=86400
+# DragonflyDB configuration (Redis-compatible)
+DRAGONFLY_URL=redis://localhost:6379/0
+DRAGONFLY_PASSWORD=tripsage_secure_password
+DRAGONFLY_MAX_MEMORY=4gb
+DRAGONFLY_PORT=6379
+DRAGONFLY_TTL_SHORT=300
+DRAGONFLY_TTL_MEDIUM=3600
+DRAGONFLY_TTL_LONG=86400
 
 # Weather MCP configuration
 WEATHER_MCP_ENDPOINT=http://localhost:3000
