test(cache): update all test configurations for DragonflyDB migration
- Replace all REDIS_* environment variables with DRAGONFLY_* in test files
- Add DRAGONFLY_PASSWORD to all test environment configurations
- Update mock settings in cache service tests to include password field
- Remove outdated Redis feature flags from documentation
- Update docker-compose example in configuration docs
- Ensure consistent DragonflyDB configuration across all test suites

--- a/tests/.env.test
+++ b/tests/.env.test
@@ -12,8 +12,9 @@ SUPABASE_URL=https://test-project.supabase.co
 SUPABASE_KEY=test_key
 SUPABASE_JWT_SECRET=test_jwt_secret
 
-# Redis Configuration (Test Values)
-REDIS_URL=redis://localhost:6379/15
+# DragonflyDB Configuration (Test Values)
+DRAGONFLY_URL=redis://localhost:6379/15
+DRAGONFLY_PASSWORD=test_dragonfly_password
 
 # API Keys (Test Values)
 OPENAI_API_KEY=test_openai_key
