--- a/.env.test
+++ b/.env.test
@@ -15,4 +15,5 @@ TRIPSAGE_TEST_MODE=true
 # Additional required keys for Phase 5
 OPENAI_API_KEY=sk-test-mock-openai-key-1234567890abcdef
 ANTHROPIC_API_KEY=sk-ant-test-mock-anthropic-key-1234567890abcdef
-REDIS_URL=redis://localhost:6379/1
+DRAGONFLY_URL=redis://localhost:6379/1
+DRAGONFLY_PASSWORD=tripsage_test_password
