fix(tests): resolve pytest-asyncio configuration warnings
- Fix section header from [tool:pytest] to [pytest] in pytest.ini
- Comment out timeout configuration requiring pytest-timeout plugin
- Properly configure asyncio_default_fixture_loop_scope=function
- Eliminate persistent pytest-asyncio deprecation warnings
- Ensure clean test execution across all async test suites

Now shows: asyncio: mode=Mode.AUTO, asyncio_default_fixture_loop_scope=function,
asyncio_default_test_loop_scope=function without warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 # Test discovery
 testpaths = tests
 python_files = test_*.py
@@ -48,8 +48,8 @@ markers =
 
 # Test execution configuration
 minversion = 6.0
-timeout = 300
-timeout_method = thread
+# timeout = 300  # Requires pytest-timeout plugin
+# timeout_method = thread  # Requires pytest-timeout plugin
 
 # Warnings configuration
 filterwarnings =
